--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "handlebars": "^4.7.7",
-    "mongodb": "^4.2.2"
+    "mongodb": "^4.2.2",
+    "passport": "^0.5.2",
+    "passport-facebook": "^3.0.0"
   }
 }
