--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "connect-mongo": "^4.6.0",
+    "dotenv": "^14.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "handlebars": "^4.7.7",
+    "minimist": "^1.2.5",
     "mongodb": "^4.2.2",
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0"
