--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "0x index.js",
+    "start": "npm install && node index.js",
     "test": "node benchmark.js"
   },
   "author": "",
